# johnjoon2004.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yaml  _quarto.yml  about.html  about.qmd  blog.html  blog.qmd  hello.html  index.html  index.qmd  listings.json  main.py  post_toc.html  projects.html  projects.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  test.html  toc.html
_backups/: poc-sentinel.ipynb
_site/: listings.json  search.json
_site/posts/: hello.html  index.html
blog/: _quarto.yml  about.qmd
blog/_site/: about.html  index.html  search.json
blog/posts/sideshow/: experiment-2.ipynb
posts/: 2025-05-13-test.ipynb  2025-06-05-ai_got.md  2025-06-08-benfords_law_in_mgtd.html  2025-06-08-benfords_law_in_mgtd.ipynb  2025-06-08-team_distance.html  2025-06-08-team_distance.ipynb  20250513.test.html  20250513.test.ipynb  20250605.ai_got.html  20250605.ai_got.md  experiment-1.html  hello.qmd  index.qmd
posts/mainshow/: experiment-1.html  poc-sentinel.html  poc-sentinel.ipynb
posts/sideshow/: experiment-2.html  experiment-2.ipynb
posts/talkshow/: experiment-3.html  post_20250605_bs.md
projects/: 20250606.test.html  20250606.test.md  index.html  projects.html
projects/posts/: 20250606.test.html
