[project]
name = "johnjoon2004-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.3.0",
    "holoviews>=1.20.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "pyvis>=0.3.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
